--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,23 @@ urllib3==1.26.15
 Werkzeug==2.2.3
 WTForms==3.0.1
 zipp==3.15.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+dnspython==2.3.0
+email-validator==1.3.1
+Flask==2.2.3
+Flask-WTF==1.1.1
+gunicorn==20.1.0
+idna==3.4
+importlib-metadata==6.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+numpy==1.24.2
+Pillow==9.4.0
+requests==2.28.2
+urllib3==1.26.15
+Werkzeug==2.2.3
+WTForms==3.0.1
+zipp==3.15.0
